2005-05-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msgfmt_SOURCES): Add hash-string.c.
	* Makefile.msvc (msgfmt_OBJECTS): Add hash-string.obj.
	(hash-string.obj): New rule.
	* Makefile.vms (msgfmt_OBJECTS): Add hash-string.obj.
	(hash-string.obj): New rule.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* x-sh.c (open_singlequote_terminator): New variable.
	(saw_opening_singlequote): Set it.
	(phase2_getc): Handle the case of open_singlequote_terminator == '"'.
	(read_word): Likewise. Treat i18n quotes like single quotes with
	terminator '"'.
	Reported by Jakub Bogusz <qboosh@pld-linux.org>.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	Improved error message.
	* msgl-iconv.h (struct conversion_context): New type.
	(convert_string): Add context argument.
	* msgl-iconv.c (conversion_error): New function.
	(convert_string, convert_string_list, convert_msgid, convert_msgstr):
	Add context argument.
	(iconv_message_list): Construct context for them.
	* xgettext.c (convert_string): Add context argument.
	(from_current_source_encoding): Construct context for convert_string.
	Reported by Hans Ulrich Niedermann <debian@n-dimensional.de>.

2005-04-18  Bruno Haible  <bruno@clisp.org>

	* po-lex.h (po_gram_error, po_gram_error_at_line): Test for
	__APPLE_CC__ > 1. Needed because gcc-4.0 defines __APPLE_CC__ and
	implements __VA_ARGS__ correctly.
	* po-lex.c (po_gram_error, po_gram_error_at_line): Likewise.
	* read-stringtable.c (phase2_getc): Optimize UTF-8 code. Avoids
	gcc-4.0 warnings.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-po.h (LIBGETTEXTPO_VERSION): Bump version number.

2005-05-21  Bruno Haible  <bruno@clisp.org>

	* format-gcc-internal.c: Update for GCC 4.0.
	(FAT_POINTER, FAT_SIZE_LONGLONG, FAT_SIZE_WIDE, FAT_SIZE_MASK): New
	enum items.
	(FAT_*): Update.
	(struct spec): Add uses_err_no field.
	(format_parse): Initialize uses_err_no field. Handle %q flag. Handle