@@ -1,3 +1,9 @@
+2005-05-27  Bruno Haible  <bruno@clisp.org>
+
+	* write-po.c (wrap): Output \a and \v as an escape sequence, like
+	\b, \f, \r.
+	Suggested by Asgeir Frimannsson <asgeirf@redhat.com>.
+
 2005-05-05  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (msgfmt_SOURCES): Add hash-string.c.
